tests/baselines/reference/moduleAugmentationGlobal6(strict=true).errors.txt
moduleAugmentationGlobal6.ts(1,9): error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
moduleAugmentationGlobal6.ts(2,26): error TS7008: Member 'x' implicitly has an 'any' type.


==== moduleAugmentationGlobal6.ts (2 errors) ====
    declare global {
            ~~~~~~
!!! error TS2669: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
        interface Array<T> { x }
                             ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    }